Update: Added HeroSection and Home page

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,9 +11,9 @@
 }
 
 .btn--primary{
-    background-color: var(--primary);
+    background-color: white;
     color: #242424;
-    border: 1px solid var(--primary);
+    border: 1px solid white;
 
 }
 
